# Tyrant

./: .gitignore  CMakeLists.txt  LICENSE  README.md
DefaultApp/Src/: App.cpp  App.h  CMakeLists.txt
Engine/: CMakeLists.txt
Engine/CMake/Config/: BuildConfig.h.in  EngineConfig.h.in  Properties.cmake
Engine/CMake/Scripts/: HelperFunctions.cmake
Engine/Runtime/: CMakeLists.txt
Engine/Runtime/App/: AppModule.cpp  AppModule.h  CMakeLists.txt  Main.cpp
Engine/Runtime/Core/: CMakeLists.txt  Core.h  CoreMacros.h
Engine/Runtime/Core/Base/: Base.h  INonCopyable.h  Primitives.h
Engine/Runtime/Core/Config/: Config.cpp  Config.h
Engine/Runtime/Core/Containers/: Array.h  Containers.h  FixedArray.h  FixedHashMap.h  FrameContainers.h  HashMap.h  LocalArray.h  MPSCRingBuffer.h  SPSCRingBuffer.h
Engine/Runtime/Core/Geometry/: BoundingSphere.cpp  BoundingSphere.h  GeometryTypes.cpp  GeometryTypes.h  GeometryUtil.cpp  GeometryUtil.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h
Engine/Runtime/Core/IO/: BinaryStream.cpp  BinaryStream.h  BufferedFileStream.cpp  BufferedFileStream.h  FileStream.cpp  FileStream.h
Engine/Runtime/Core/Identifers/: Hashing.h  Identifiers.cpp  Identifiers.h
Engine/Runtime/Core/Identifiers/: Guid.h  Hashing.h  Identifiers.cpp  Identifiers.h
Engine/Runtime/Core/Logging/: Logger.cpp  Logger.h
Engine/Runtime/Core/Math/: Math.cpp  Math.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  SIMD.h  Vector2.cpp  Vector2.h  Vector2I.cpp  Vector2I.h  Vector3.cpp  Vector3.h  Vector3I.cpp  Vector3I.h  Vector4.cpp  Vector4.h
Engine/Runtime/Core/Memory/: Allocation.cpp  Allocation.h  FrameAllocation.cpp  FrameAllocation.h  LocalObjectPool.h  Memory.h  MemoryOverrides.h  MemoryTypes.h  ObjectPool.h  ScratchAllocator.cpp  ScratchAllocator.h  StackAllocation.cpp  StackAllocation.h
Engine/Runtime/Core/Module/: IModule.h  ModuleManager.cpp  ModuleManager.h
Engine/Runtime/Core/Platform/: Platform.h
Engine/Runtime/Core/Reflection/: BasicTypesRefl.cpp  PrivateReflection.h  Reflection.h  ReflectionUtil.h  Serializer.cpp  Serializer.h  TypeInfo.cpp  TypeInfo.h  TypeName.h  TypeRegistry.cpp  TypeRegistry.h
Engine/Runtime/Core/String/: CustomString.cpp  CustomString.h  FrameStringTypes.h  LocalString.h  Name.h  Path.h  StringTypes.h  StringUtil.cpp  StringUtil.h
Engine/Runtime/Core/Threading/: Callable.cpp  Callable.h  Task.cpp  Task.h  ThreadPool.cpp  ThreadPool.h  Threading.h
Engine/Runtime/Core/Time/: Timer.cpp  Timer.h
Engine/Runtime/Core/Utility/: INonCopyable.h  LibraryLoader.cpp  LibraryLoader.h  PathUtil.cpp  PathUtil.h  Utility.cpp  Utility.h
Engine/Runtime/Core/Win32/: PCWindow.cpp  PCWindow.h  Win32Platform.cpp  Win32Platform.h  resource.h
Engine/Runtime/Core/Window/: Window.cpp  Window.h  WindowModule.cpp  WindowModule.h
Engine/Runtime/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  EngineMacros.h  EngineManager.cpp  EngineManager.h
Engine/Runtime/Engine/App/: AppBase.cpp  AppBase.h
Engine/Runtime/Engine/AssetSystem/: AssetManager.cpp  AssetManager.h  AssetModule.cpp  AssetModule.h  AssetPath.cpp  AssetPath.h  AssetRegistry.cpp  AssetRegistry.h  AssetUtil.cpp  AssetUtil.h  MaterialAsset.cpp  MaterialAsset.h  TextureAsset.cpp  TextureAsset.h
Engine/Runtime/Engine/Components/: Components.h
Engine/Runtime/Engine/Importing/: ImageCompressor.cpp  ImageCompressor.h  ImageLoader.cpp  ImageLoader.h  ImageUtil.cpp  ImageUtil.h  MaterialImporter.cpp  MaterialImporter.h
Engine/Runtime/Engine/Input/: InputManager.cpp  InputManager.h  InputModule.cpp  InputModule.h
Engine/Runtime/Engine/Loading/: ImageLoader.cpp  ImageLoader.h
Engine/Runtime/Engine/Win32/: ClearEngine.aps  ClearEngine.rc  PCInputManager.cpp  PCInputManager.h  PCWindow.cpp  PCWindow.h
Engine/Runtime/Engine/Window/: Window.cpp  Window.h
Engine/Runtime/Engine/World/: Camera.cpp  Camera.h  World.cpp  World.h  WorldManager.cpp  WorldManager.h  WorldModule.cpp  WorldModule.h
Engine/Runtime/Graphics/: CMakeLists.txt  GraphicsMacros.h  GraphicsManager.cpp  GraphicsManager.h
Engine/Runtime/Graphics/RenderAPI/: AccelerationStructure.cpp  AccelerationStructure.h  Buffer.cpp  Buffer.h  CommandAllocator.cpp  CommandAllocator.h  CommandList.cpp  CommandList.h  CommandListPool.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetGroup.h  Device.cpp  Device.h  GraphicsBase.h  GraphicsUtility.cpp  GraphicsUtility.h  Image.cpp  Image.h  Pipeline.cpp  Pipeline.h  RenderAPI.cpp  RenderAPI.h  RenderAPITypes.h  Shader.cpp  Shader.h  ShaderModule.h  SwapChain.cpp  SwapChain.h  Sync.cpp  Sync.h
Engine/Runtime/Graphics/Vulkan/: VulkanAccelerationStructure.cpp  VulkanAccelerationStructure.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandAllocator.cpp  VulkanCommandAllocator.h  VulkanCommandList.cpp  VulkanCommandList.h  VulkanCommon.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDescriptorSetGroup.cpp  VulkanDescriptorSetGroup.h  VulkanDevice.cpp  VulkanDevice.h  VulkanExtensions.h  VulkanHelper.cpp  VulkanHelper.h  VulkanImage.cpp  VulkanImage.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderAPI.cpp  VulkanRenderAPI.h  VulkanShader.cpp  VulkanShader.h  VulkanShaderModule.cpp  VulkanShaderModule.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanSync.cpp  VulkanSync.h  VulkanUtility.cpp  VulkanUtility.h
Engine/Runtime/Renderer/: CMakeLists.txt  RendererMacros.h  RendererModule.cpp  RendererModule.h
Engine/Runtime/Renderer/DataTypes/: DataTypes.h  DataTypesCommon.h  GUI.h  Material.h  RigidModel.h  Shapes.cpp  Shapes.h  SkeletalModel.h
Engine/Runtime/Renderer/DataUtility/: MeshUtil.cpp
Engine/Runtime/Renderer/RenderDataTypes/: GUI.h  Lights.h  Material.cpp  Material.h  RenderDataTypes.h  RenderDataTypesCommon.h  RigidMesh.h  Shapes.cpp  SkeletalMesh.h  Vertex.h
Engine/Runtime/Renderer/RenderDataUtility/: MeshUtil.cpp  MeshUtil.h
Engine/Runtime/Renderer/RenderUpdate/: RenderFrame.h  RenderUpdate.h
Engine/Runtime/Renderer/Rendering/: Pass.cpp  (+17 more)
Engine/Tools/: CMakeLists.txt
Engine/Tools/Editor/: CMakeLists.txt  Editor.cpp  Editor.h  EditorMacros.h
(+22 files in other folders)
